@@ -1,3 +1,10 @@
+2008-05-16  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-audio-preview.c (main):
+	* src/totem-video-indexer.c (main):
+	* src/totem-video-thumbnailer.c (main): Use
+	g_option_context_get_help () to print out the help
+
 ============ Version 2.23.3
 
 2008-05-14  Bastien Nocera  <hadess@hadess.net>
